# src/routes/index.ts
@@ -1,9 +1,7 @@
 import { Router } from "express";
-import { administratorsRoutes } from "./administrators.routes";
-import { studentsRoutes } from "./students.routes";
+import { usersRoutes } from "./users.routes";
 
 const router = Router();
-router.use("/students", studentsRoutes);
-router.use("/administrators", administratorsRoutes);
+router.use("/users", usersRoutes);
 
 export { router }
